--- a/vp9_codec_registration.src.html
+++ b/vp9_codec_registration.src.html
@@ -16,7 +16,8 @@ Abstract: This registration is entered into the [[webcodecs-codec-registry]].
     (2) the codec-specific {{EncodedVideoChunk}}
     {{EncodedVideoChunk/[[internal data]]}} bytes, (3) the
     {{VideoDecoderConfig/description|VideoDecoderConfig.description}} bytes,
-    and (4) the values of {{EncodedVideoChunk}} {{EncodedVideoChunk/[[type]]}}.
+    (4) the values of {{EncodedVideoChunk}} {{EncodedVideoChunk/[[type]]}}, and
+    (5) the range of values of {{VideoEncoderEncodeOptions}} {{VideoEncoderEncodeOptions/[[quantizer]]}}.
 
     The registration is not intended to include any information on whether a
     codec format is encumbered by intellectual property claims. Implementers and
@@ -71,6 +72,12 @@ If an {{EncodedVideoChunk}}'s {{EncodedVideoChunk/[[type]]}} is
 {{EncodedVideoChunkType/key}}, then the {{EncodedVideoChunk}} is expected to
 contain a frame with a `frame_type` of `KEY_FRAME` as defined in Section
 7.2 of [[VP9]].
+
+VideoEncoderEncodeOptions quantizer {#videoencoderencodeoptions-quantizer}
+================================================
+
+In [[VP9]] the {{VideoEncoderEncodeOptions/quantizer}} values can be from 0 to 63.
+
 
 Privacy Considerations {#privacy-considerations}
 ==========================================================================
