--- a/index.src.html
+++ b/index.src.html
@@ -198,7 +198,7 @@ Control Messages {#control-messages}
 A <dfn>control message</dfn> defines a sequence of steps corresponding to a
 method invocation on a [=codec=] instance (e.g. `encode()`).
 
-A <dfn>control message queue</dfn> is a a [=queue=] of
+A <dfn>control message queue</dfn> is a [=queue=] of
 [=control messages=]. Each [=codec=] instance has a control message queue
 stored in an internal slot named
 <dfn id='control-message-queue-slot'>[[control message queue]]</dfn>.
@@ -221,7 +221,7 @@ blocking message will conclude by setting [=[[message queue blocked]]=] to
 All control messages will return either `"processed"` or `"not processed"`.
 Returning `"processed"` indicates the message steps are being (or have been)
 executed and the message may be removed from the [=control message queue=].
-`"not processed"` indicates the message must could not be processed at this time
+`"not processed"` indicates the message must not be processed at this time
 and should remain in the [=control message queue=] to be retried later.
 
 To <dfn>Process the control message queue</dfn>, run these steps:
@@ -2038,7 +2038,7 @@ run these steps:
 1. If {{AudioEncoderConfig/codec}} is not a <a>valid codec string</a>, return
     `false`.
 2. If the {{AudioEncoderConfig}} has a codec-specific extension and the corresponding 
-    registration in the [[WEBCODECS-CODEC-REGISTRY]] defines steps to check whether the
+    registration in the [[WEBCODECS-CODEC-REGISTRY]] defines steps to check whether
     the extension is a valid extension, return the result of running those steps.
 3. Return `true`.
 
@@ -2603,7 +2603,7 @@ Decoded media data <em class="rfc2119">MAY</em> occupy a large amount of system
 memory. To minimize the need for expensive copies, this specification defines a
 scheme for reference counting (`clone()` and `close()`).
 
-NOTE: Authors are encourage to call `close()` immediately when frames are
+NOTE: Authors are encouraged to call `close()` immediately when frames are
     no longer needed.
 
 ### Reference Counting ### {#raw-media-memory-model-reference-counting}
@@ -2967,7 +2967,7 @@ dictionary AudioDataCopyToOptions {
 </xmp>
 
 : <dfn dict-member for=AudioDataCopyToOptions>planeIndex</dfn>
-:: The index identifying the plane to copy from.
+:: The index identifies the plane to copy from.
 
 : <dfn dict-member for=AudioDataCopyToOptions>frameOffset</dfn>
 :: An offset into the source plane data indicating which [=frame=] to begin
@@ -3005,10 +3005,10 @@ A <dfn>sample</dfn> refers to a single value that is the magnitude of a
 signal at a particular point in time in a particular channel.
 
 A <dfn>frame</dfn> or (sample-frame) refers to a set of values of all channels
-of a multi-channel signal, that happen at the exact same time.
+of a multi-channel signal, that happened at the exact same time.
 
-NOTE: Consequently if an audio signal is mono (has only one channel), a frame
-and a sample refer to the same thing.
+NOTE: Consequently, if an audio signal is mono (has only one channel), a frame
+or a sample refers to the same thing.
 
 All audio [=samples=] in this specification are using linear pulse-code
 modulation (Linear PCM): quantization levels are uniform between values.
