restore 3 wrong fixes according to the comments of @padenot

--- a/index.src.html
+++ b/index.src.html
@@ -2963,7 +2963,7 @@ dictionary AudioDataCopyToOptions {
 </xmp>
 
 : <dfn dict-member for=AudioDataCopyToOptions>planeIndex</dfn>
-:: The index identifies the plane to copy from.
+:: The index identifying the plane to copy from.
 
 : <dfn dict-member for=AudioDataCopyToOptions>frameOffset</dfn>
 :: An offset into the source plane data indicating which [=frame=] to begin
@@ -3001,10 +3001,10 @@ A <dfn>sample</dfn> refers to a single value that is the magnitude of a
 signal at a particular point in time in a particular channel.
 
 A <dfn>frame</dfn> or (sample-frame) refers to a set of values of all channels
-of a multi-channel signal, that happened at the exact same time.
+of a multi-channel signal, that happen at the exact same time.
 
 NOTE: Consequently, if an audio signal is mono (has only one channel), a frame
-or a sample refers to the same thing.
+and a sample refer to the same thing.
 
 All audio [=samples=] in this specification are using linear pulse-code
 modulation (Linear PCM): quantization levels are uniform between values.
