--- a/index.src.html
+++ b/index.src.html
@@ -130,13 +130,13 @@ Definitions {#definitions}
 
 : <dfn>Spatial Layer</dfn>
 :: A grouping of {{EncodedVideoChunk}}s that produces a particular resolution.
-   See {{VideoEncoderConfig/scalabilityMode}}.
+    See {{VideoEncoderConfig/scalabilityMode}}.
 
 : <dfn>Decode Target</dfn>
 :: A numerical index determined by the encoder that indicates the set of frames
-   needed to decode a sequence of {{EncodedVideoChunk}}s at a given spatial and
-   temporal fidelity. Values do not necessarily correspond to a given temporal
-   or spatial layer.
+    needed to decode a sequence of {{EncodedVideoChunk}}s at a given spatial and
+    temporal fidelity. Values do not necessarily correspond to a given
+    [=Temporal Layer=] or [=Spatial Layer=].
 
 : <dfn>Progressive Image</dfn>
 :: An image that supports decoding to multiple levels of detail, with lower
@@ -1732,16 +1732,16 @@ dictionary SvcOutputMetadata {
     channel data.
 
 : <dfn dict-member for=SvcOutputMetadata>temporalLayerId</dfn>
-:: A number that identifies the [=temporal layer=] for the associated
+:: A number that identifies the [=Temporal Layer=] for the associated
     {{EncodedVideoChunk}}.
 
 : <dfn dict-member for=SvcOutputMetadata>spatialLayerId</dfn>
-:: A number that identifies the [=spatial layer=] for the associated
+:: A number that identifies the [=Spatial Layer=] for the associated
     {{EncodedVideoChunk}}.
 
 : <dfn dict-member for=SvcOutputMetadata>frameNumber</dfn>
 :: A number that identifies the frame in {{dependsOnIds}} and 
-  {{chainLinks}} (for other {{EncodedVideoChunk}}s).
+  {{chainLinks}} (for other {{EncodedVideoChunk}} values).
 
 : <dfn dict-member for=SvcOutputMetadata>dependsOnIds</dfn>
 :: A sequence of {{frameNumber}} values that this {{EncodedVideoChunk}}
