Annotate encoder/decoders with EventTarget on ondequeue events.
Seems to be an oversight from when ondequeue events were added.
Allows the idlharness.js test to start passing.

--- a/index.src.html
+++ b/index.src.html
@@ -256,7 +256,7 @@ AudioDecoder Interface {#audiodecoder-interface}
 
 <xmp class='idl'>
 [Exposed=(Window,DedicatedWorker), SecureContext]
-interface AudioDecoder {
+interface AudioDecoder : EventTarget {
   constructor(AudioDecoderInit init);
 
   readonly attribute CodecState state;
@@ -583,7 +583,7 @@ VideoDecoder Interface {#videodecoder-interface}
 
 <xmp class='idl'>
 [Exposed=(Window,DedicatedWorker), SecureContext]
-interface VideoDecoder {
+interface VideoDecoder : EventTarget {
   constructor(VideoDecoderInit init);
 
   readonly attribute CodecState state;
@@ -937,7 +937,7 @@ AudioEncoder Interface {#audioencoder-interface}
 
 <xmp class='idl'>
 [Exposed=(Window,DedicatedWorker), SecureContext]
-interface AudioEncoder {
+interface AudioEncoder : EventTarget {
   constructor(AudioEncoderInit init);
 
   readonly attribute CodecState state;
@@ -1310,7 +1310,7 @@ VideoEncoder Interface {#videoencoder-interface}
 
 <xmp class='idl'>
 [Exposed=(Window,DedicatedWorker), SecureContext]
-interface VideoEncoder {
+interface VideoEncoder : EventTarget {
   constructor(VideoEncoderInit init);
 
   readonly attribute CodecState state;
