Add definitions of Chain and frame_number

--- a/index.src.html
+++ b/index.src.html
@@ -131,6 +131,14 @@ Definitions {#definitions}
 : <dfn>Spatial Layer</dfn>
 :: A grouping of {{EncodedVideoChunk}}s that produces a particular resolution.
     See {{VideoEncoderConfig/scalabilityMode}}.
+    
+: <dfn>Chain</dfn>
+:: A sequence of frames for which it can be determined instantly if a frame
+from that sequence has been lost.
+
+: <dfn>frame_number</dfn>
+:: A 16-bit number that increases strictly monotonically in decode order.
+Defined in [[AV1-RTP]] Section A.8.3. 
 
 : <dfn>Decode Target</dfn>
 :: A numerical index determined by the encoder that indicates the set of frames
