--- a/index.src.html
+++ b/index.src.html
@@ -132,11 +132,11 @@ Definitions {#definitions}
 :: A grouping of {{EncodedVideoChunk}}s that produces a particular resolution.
     See {{VideoEncoderConfig/scalabilityMode}}.
     
-: <dfn>Chain</dfn>
+: <dfn>chainLinks</dfn>
 :: A sequence of frames for which it can be determined instantly if a frame
-from that sequence has been lost.
+from that sequence has been lost. Defined in [[AV1-RTP]] Section A.5.
 
-: <dfn>frame_number</dfn>
+: <dfn>frameNumber</dfn>
 :: A 16-bit number that increases strictly monotonically in decode order.
 Defined in [[AV1-RTP]] Section A.8.3. 
 
