--- a/index.src.html
+++ b/index.src.html
@@ -132,13 +132,14 @@ Definitions {#definitions}
 :: A grouping of {{EncodedVideoChunk}}s that produces a particular resolution.
     See {{VideoEncoderConfig/scalabilityMode}}.
     
-: <dfn>chainLinks</dfn>
-:: A sequence of frames for which it can be determined instantly if a frame
-from that sequence has been lost. Defined in [[AV1-RTP]] Section A.5.
+: <dfn>Chains</dfn>
+:: {{chainLinks}} represents a sequence of frames for which it can be determined
+    instantly if a frame from that sequence has been lost. Defined in [[AV1-RTP]]
+    Section A.5.
 
-: <dfn>frameNumber</dfn>
-:: A 16-bit number that increases strictly monotonically in decode order.
-Defined in [[AV1-RTP]] Section A.8.3. 
+: <dfn>Frame Number</dfn>
+:: {{frameNumber}} is a 16-bit number that increases strictly monotonically in
+    decode order. Defined in [[AV1-RTP]] Section A.8.3. 
 
 : <dfn>Decode Target</dfn>
 :: A numerical index determined by the encoder that indicates the set of frames
@@ -1760,8 +1761,8 @@ dictionary SvcOutputMetadata {
    participates in.
 
 : <dfn dict-member for=SvcOutputMetadata>chainLinks</dfn>
-:: A mapping of [=Decode Target=] values to the last important frame to
-   decode prior to this {{EncodedVideoChunk}}, for a given
+:: A mapping of [=Decode Target=] values to the last important frame
+   to decode prior to this {{EncodedVideoChunk}}, for a given
    [=Decode Target=] value.
 
 Configurations{#configurations}
