Correct type to boolean

--- a/av1_codec_registration.src.html
+++ b/av1_codec_registration.src.html
@@ -96,7 +96,7 @@ AV1EncoderConfig {#av1-encoder-config}
 <pre class='idl'>
 <xmp>
 dictionary AV1EncoderConfig {
- unsigned short seqForceScreenContentTools = 0
+ boolean seqForceScreenContentTools = false
 };
 </xmp>
 </pre>
@@ -105,9 +105,10 @@ dictionary AV1EncoderConfig {
   <dt><dfn dict-member for=AV1EncoderConfig>seqForceScreenContentTools</dfn></dt>
   <dd>
      Indicates whether the encoder should force use of screen content coding tools.
-     The default value (0) indicates that use of screen content coding tools should
-     not be forced. A value of 2 (SELECT_SCREEN_CONTENT_TOOLS) indicates that 
-     use of screen content coding tools should be forced.
+     The default value (false) indicates that use of screen content coding tools
+     should not be forced. A value of true (denoted as SELECT_SCREEN_CONTENT_TOOLS
+     in [[AV1]] Section 5.5.1) indicates that use of screen content coding tools
+     should be forced.
   </dd>
 </dl>
 
