Correct AV1 reference

--- a/av1_codec_registration.src.html
+++ b/av1_codec_registration.src.html
@@ -107,7 +107,7 @@ dictionary AV1EncoderConfig {
      Indicates whether the encoder should force use of screen content coding tools.
      The default value (false) indicates that use of screen content coding tools
      should not be forced. A value of true (denoted as SELECT_SCREEN_CONTENT_TOOLS
-     in [[AV1]] Section 5.5.1) indicates that use of screen content coding tools
+     in Section 5.5.1 of [[AV1]]) indicates that use of screen content coding tools
      should be forced.
   </dd>
 </dl>
