Fix AV1-RTP references

--- a/index.src.html
+++ b/index.src.html
@@ -134,12 +134,12 @@ Definitions {#definitions}
     
 : <dfn>Chains</dfn>
 :: {{chainLinks}} represents a sequence of frames for which it can be determined
-    instantly if a frame from that sequence has been lost. Defined in [[AV1-RTP]]
-    Section A.5.
+    instantly if a frame from that sequence has been lost. Defined in Section A.5
+    of [[AV1-RTP]].
 
 : <dfn>Frame Number</dfn>
 :: {{frameNumber}} is a 16-bit number that increases strictly monotonically in
-    decode order. Defined in [[AV1-RTP]] Section A.8.3. 
+    decode order. Defined in Section A.8.3 of [[AV1-RTP]]. 
 
 : <dfn>Decode Target</dfn>
 :: A numerical index determined by the encoder that indicates the set of frames
