Add AV1-RTP reference

--- a/index.src.html
+++ b/index.src.html
@@ -54,6 +54,15 @@ spec: ECMASCRIPT; urlPrefix: https://tc39.es/ecma262/
 
 <pre class='biblio'>
 {
+  "AV1-RTP": {
+    "title": "RTP Payload Format for AV1",
+    "href": "https://aomediacodec.github.io/av1-rtp-spec/",
+    "authors": [
+      "AV1 RTC SG"
+    ],
+    "status": "Standard",
+    "publisher": "Alliance for Open Media"
+  },
   "H.273": {
     "href": "https://www.itu.int/rec/T-REC-H.273/en",
     "title": "Coding-independent code points for video signal type identification",
