--- a/av1_codec_registration.src.html
+++ b/av1_codec_registration.src.html
@@ -96,19 +96,20 @@ AV1EncoderConfig {#av1-encoder-config}
 <pre class='idl'>
 <xmp>
 dictionary AV1EncoderConfig {
- boolean seqForceScreenContentTools = false
+ boolean forceScreenContentTools = false
 };
 </xmp>
 </pre>
 
 <dl>
-  <dt><dfn dict-member for=AV1EncoderConfig>seqForceScreenContentTools</dfn></dt>
+  <dt><dfn dict-member for=AV1EncoderConfig>forceScreenContentTools</dfn></dt>
   <dd>
-     Indicates whether the encoder should force use of screen content coding tools.
-     The default value (false) indicates that use of screen content coding tools
-     should not be forced. A value of true (denoted as SELECT_SCREEN_CONTENT_TOOLS
-     in Section 5.5.1 of [[AV1]]) indicates that use of screen content coding tools
-     should be forced.
+     Indicates whether the encoder should force use of screen content
+     coding tools. The default value (false) indicates that use of
+     screen content coding tools is not forced. A value of true
+     (corresponding to SELECT_SCREEN_CONTENT_TOOLS in Section 5.5.1
+     of [[AV1]]) indicates that use of screen content coding tools
+     is forced.
   </dd>
 </dl>
 
