Add missing quote

--- a/index.src.html
+++ b/index.src.html
@@ -58,7 +58,7 @@ spec: ECMASCRIPT; urlPrefix: https://tc39.es/ecma262/
     "title": "RTP Payload Format for AV1",
     "href": "https://aomediacodec.github.io/av1-rtp-spec/",
     "authors": [
-      "AV1 RTC SG
+      "AV1 RTC SG"
     ],
     "status": "Standard",
     "publisher": "Alliance for Open Media"
