--- a/index.src.html
+++ b/index.src.html
@@ -1723,7 +1723,7 @@ dictionary SvcOutputMetadata {
   unsigned long frameNumber;
   sequence <unsigned long> dependencies;
   sequence <unsigned long> decodeTargets;
-  map <unsigned long, unsigned long> chainLinks;
+  maplike <unsigned long, unsigned long> chainLinks;
 };
 </xmp>
 
