--- a/index.src.html
+++ b/index.src.html
@@ -1723,7 +1723,7 @@ dictionary SvcOutputMetadata {
   unsigned long frameNumber;
   sequence <unsigned long> dependencies;
   sequence <unsigned long> decodeTargets;
-  maplike <unsigned long, unsigned long> chainLinks;
+  sequence <unsigned long> chainLinks;
 };
 </xmp>
 
@@ -1759,8 +1759,8 @@ dictionary SvcOutputMetadata {
      participates in.
      
 : <dfn dict-member for=SvcOutputMetadata>chainLinks</dfn>
-:: A mapping of [=Decode Target=] values to the last important frame
-     to decode prior to this {{EncodedVideoChunk}}.
+:: A mapping of [=Decode Target=] values to the frame number of the
+     last important frame to decode prior to this {{EncodedVideoChunk}}.
 
 Configurations{#configurations}
 ===============================
