--- a/opus_codec_registration.src.html
+++ b/opus_codec_registration.src.html
@@ -120,6 +120,7 @@ dictionary OpusEncoderConfig {
   [EnforceRange] unsigned long packetlossperc = 0;
   boolean useinbandfec = false;
   boolean usedtx = false;
+  BitrateMode bitrateMode = "variable";
 };
 </xmp>
 </pre>
@@ -168,6 +169,14 @@ To check if an {{OpusEncoderConfig}} is valid, run these steps:
   <dd>
     Specifies if the encoder uses Discontinuous Transmission (DTX), as described
     by section 2.1.9. of [[RFC6716]].
+  </dd>
+  <dt><dfn dict-member for=OpusEncoderConfig>bitrateMode</dfn></dt>
+  <dd>
+    Configures encoder to use a {{BitrateMode/constant}} or
+    {{BitrateMode/variable}} bitrate mode as defined by [[MEDIASTREAM-RECORDING]].
+
+    NOTE: {{BitrateMode/constant}} correspond to Opus CBR and {{BitrateMode/variable}} 
+	correspond to Opus VBR as defined by section-2.1.8. of [[RFC6716]].
   </dd>
 </dl>
 
