--- a/index.src.html
+++ b/index.src.html
@@ -2027,6 +2027,7 @@ dictionary AudioEncoderConfig {
   [EnforceRange] unsigned long sampleRate;
   [EnforceRange] unsigned long numberOfChannels;
   [EnforceRange] unsigned long long bitrate;
+  BitrateMode bitrateMode;
 };
 </xmp>
 
@@ -2055,6 +2056,13 @@ run these steps:
   <dt><dfn dict-member for=AudioEncoderConfig>bitrate</dfn></dt>
   <dd>
     The average bitrate of the encoded audio given in units of bits per second.
+  </dd>
+  <dt><dfn dict-member for=AudioEncoderConfig>bitrateMode</dfn></dt>
+  <dd>
+    Configures encoder to use a {{BitrateMode/constant}} or
+    {{BitrateMode/variable}} bitrate as defined by [[MEDIASTREAM-RECORDING]].
+
+	NOTE: Not all audio codecs support specific {{BitrateMode}}, Authors are encouraged to check by calling {{AudioEncoder/isConfigSupported()}} with |config|.
   </dd>
 </dl>
 
