Clarify screen content tool variable

--- a/av1_codec_registration.src.html
+++ b/av1_codec_registration.src.html
@@ -107,7 +107,8 @@ dictionary AV1EncoderConfig {
      Indicates whether the encoder should force use of screen content
      coding tools. The default value (false) indicates that use of
      screen content coding tools is not forced. A value of true
-     (corresponding to SELECT_SCREEN_CONTENT_TOOLS in Section 5.5.1
+     (corresponding to setting seq_force_screen_content_tools
+     to SELECT_SCREEN_CONTENT_TOOLS in Section 5.5.1
      of [[AV1]]) indicates that use of screen content coding tools
      is forced.
   </dd>
