Enable configuration of AV1 screen content coding tools
Fixes https://github.com/w3c/webcodecs/issues/646

Rebase of https://github.com/w3c/webcodecs/pull/652

--- a/av1_codec_registration.src.html
+++ b/av1_codec_registration.src.html
@@ -98,6 +98,7 @@ VideoEncoderEncodeOptionsForAv1 {#av1-encode-options}
 <xmp>
 dictionary VideoEncoderEncodeOptionsForAv1 {
   unsigned short? quantizer;
+  boolean forceScreenContentTools = false;
 };
 </xmp>
 </pre>
@@ -107,6 +108,19 @@ dictionary VideoEncoderEncodeOptionsForAv1 {
   <dd>
     Sets per-frame quantizer value.
     In [[AV1]] the quantizer threshold can be varied from 0 to 63
+  </dd>
+</dl>
+
+<dl>
+  <dt><dfn dict-member for=VideoEncoderEncodeOptionsForAv1>forceScreenContenttools</dfn></dt>
+  <dd>
+     Indicates whether the encoder should force use of screen content
+     coding tools. The default value (false) indicates that use of
+     screen content coding tools is not forced. A value of true
+     (corresponding to setting seq_force_screen_content_tools
+     to SELECT_SCREEN_CONTENT_TOOLS in Section 5.5.1
+     of [[AV1]]) indicates that use of screen content coding tools
+     is forced.
   </dd>
 </dl>
 
