--- a/av1_codec_registration.src.html
+++ b/av1_codec_registration.src.html
@@ -74,6 +74,47 @@ If an {{EncodedVideoChunk}}'s {{EncodedVideoChunk/[[type]]}} is
 contain a frame with a `frame_type` of `KEY_FRAME` as defined in Section
 6.8.2 of [[AV1]].
 
+VideoEncoderConfig extensions {#videoencoderconfig-extensions}
+==============================================================
+
+<pre class='idl'>
+<xmp>
+partial dictionary VideoEncoderConfig {
+  AV1EncoderConfig av1;
+};
+</xmp>
+</pre>
+
+<dl>
+  <dt><dfn dict-member for=VideoEncoderConfig>av1</dfn></dt>
+  <dd>
+    Contains codec specific configuration options for the AV1 codec.
+  </dd>
+</dl>
+
+AV1EncoderConfig {#av1-encoder-config}
+--------------------------------------
+<pre class='idl'>
+<xmp>
+dictionary AV1EncoderConfig {
+  boolean forceScreenContentTools = false;
+};
+</xmp>
+</pre>
+
+<dl>
+  <dt><dfn dict-member for=AV1EncoderConfig>forceScreenContentTools</dfn></dt>
+  <dd>
+     Indicates whether the encoder should force use of screen content
+     coding tools. The default value (false) indicates that use of
+     screen content coding tools is not forced. A value of true
+     (corresponding to setting seq_force_screen_content_tools
+     to SELECT_SCREEN_CONTENT_TOOLS in Section 5.5.1
+     of [[AV1]]) indicates that use of screen content coding tools
+     is forced.
+  </dd>
+</dl>
+
 VideoEncoderEncodeOptions extensions {#videoencoderencodeoptions-extensions}
 ==============================================================
 
@@ -98,7 +139,6 @@ VideoEncoderEncodeOptionsForAv1 {#av1-encode-options}
 <xmp>
 dictionary VideoEncoderEncodeOptionsForAv1 {
   unsigned short? quantizer;
-  boolean forceScreenContentTools = false;
 };
 </xmp>
 </pre>
@@ -108,19 +148,6 @@ dictionary VideoEncoderEncodeOptionsForAv1 {
   <dd>
     Sets per-frame quantizer value.
     In [[AV1]] the quantizer threshold can be varied from 0 to 63
-  </dd>
-</dl>
-
-<dl>
-  <dt><dfn dict-member for=VideoEncoderEncodeOptionsForAv1>forceScreenContenttools</dfn></dt>
-  <dd>
-     Indicates whether the encoder should force use of screen content
-     coding tools. The default value (false) indicates that use of
-     screen content coding tools is not forced. A value of true
-     (corresponding to setting seq_force_screen_content_tools
-     to SELECT_SCREEN_CONTENT_TOOLS in Section 5.5.1
-     of [[AV1]]) indicates that use of screen content coding tools
-     is forced.
   </dd>
 </dl>
 
