Update the abstract

--- a/av1_codec_registration.src.html
+++ b/av1_codec_registration.src.html
@@ -14,10 +14,11 @@ Former Editor: Chris Cunningham, w3cid 114832, Google Inc. https://www.google.co
 Abstract: This registration is entered into the [[webcodecs-codec-registry]].
     It describes, for AV1, the (1) fully qualified codec strings,
     (2) the codec-specific {{EncodedVideoChunk}}
-    {{EncodedVideoChunk/[[internal data]]}} bytes, (3) the
+    {{EncodedVideoChunk/[[internal data]]}} bytes, (3) the codec-specific
+    extensions to {{VideoEncoderConfig}}, (4) the
     {{VideoDecoderConfig/description|VideoDecoderConfig.description}} bytes,
-    (4) the values of {{EncodedVideoChunk}} {{EncodedVideoChunk/[[type]]}}, and
-    (5) the codec-specific extensions to {{VideoEncoderEncodeOptions}}.
+    (5) the values of {{EncodedVideoChunk}} {{EncodedVideoChunk/[[type]]}}, and
+    (6) the codec-specific extensions to {{VideoEncoderEncodeOptions}}.
 
     The registration is not intended to include any information on whether a
     codec format is encumbered by intellectual property claims. Implementers and
