fix 2 grammatical errors

--- a/index.src.html
+++ b/index.src.html
@@ -2059,10 +2059,10 @@ run these steps:
   </dd>
   <dt><dfn dict-member for=AudioEncoderConfig>bitrateMode</dfn></dt>
   <dd>
-    Configures encoder to use a {{BitrateMode/constant}} or
+    Configures the encoder to use a {{BitrateMode/constant}} or
     {{BitrateMode/variable}} bitrate as defined by [[MEDIASTREAM-RECORDING]].
 
-	NOTE: Not all audio codecs support specific {{BitrateMode}}, Authors are encouraged to check by calling {{AudioEncoder/isConfigSupported()}} with |config|.
+	NOTE: Not all audio codecs support specific {{BitrateMode}}s, Authors are encouraged to check by calling {{AudioEncoder/isConfigSupported()}} with |config|.
   </dd>
 </dl>
 
