Work around Markdown syntax

--- a/index.src.html
+++ b/index.src.html
@@ -4328,9 +4328,9 @@ is its own [=equivalent opaque format=].
     {{VideoFrame/codedWidth}} samples.
 
     The UV plane is composed of interleaved U and V values, in a number of
-    rows equal to the ceiling of the division of {{VideoFrame/codedHeight}} by
-    2. Each row has a number of elements equal to the ceiling of the division of
-    {{VideoFrame/codedWidth}} by 2. Each element is composed of two chroma
+    rows equal to the ceiling of the division of {{VideoFrame/codedHeight}}
+    by 2. Each row has a number of elements equal to the ceiling of the division
+    of {{VideoFrame/codedWidth}} by 2. Each element is composed of two Chroma
     samples, the U and V samples, in that order. Samples are arranged starting
     at the top left of the image.
 
