--- a/index.src.html
+++ b/index.src.html
@@ -1732,7 +1732,7 @@ dictionary SvcOutputMetadata {
   unsigned long frameNumber;
   sequence <unsigned long> dependencies;
   sequence <unsigned long> decodeTargets;
-  maplike <unsigned long, unsigned long> chainLinks;
+  record <USVString, unsigned long> chainLinks;
 };
 </xmp>
 
