Fix HEVC registration text

--- a/hevc_codec_registration.src.html
+++ b/hevc_codec_registration.src.html
@@ -167,7 +167,7 @@ The {{HevcBitstreamFormat}} determines the location of HEVC parameter sets, and
 mechanisms for packaging the bitstream.
 
 <dl>
-  <dt><dfn enum-value for=AvcBitstreamFormat>annexb</dfn></dt>
+  <dt><dfn enum-value for=HevcBitstreamFormat>annexb</dfn></dt>
   <dd>
     Parameter sets are included periodically throughout the bitstream.
 
@@ -176,7 +176,7 @@ mechanisms for packaging the bitstream.
         where including the parameter set data periodically allows users to
         easily start from the middle of the stream.
   </dd>
-  <dt><dfn enum-value for=AvcBitstreamFormat>hevc</dfn></dt>
+  <dt><dfn enum-value for=HevcBitstreamFormat>hevc</dfn></dt>
   <dd>
     Parameter sets are not included in the bitstream and are instead emitted
     via the {{VideoEncoder/[[output callback]]}} as the
