--- a/index.src.html
+++ b/index.src.html
@@ -2910,7 +2910,7 @@ dictionary AudioDataInit {
             to |copyFrameCount|.
     10. Let |elementCount| be |copyFrameCount|.
     11. If |destFormat| describes an [=interleaved=]
-        {{AudioSampleFormat}}, mutliply |elementCount| by
+        {{AudioSampleFormat}}, multiply |elementCount| by
         {{AudioData/[[number of channels]]}}
     12. return |elementCount|.
 
