Add support for per-frame QP to HEVC

--- a/hevc_codec_registration.src.html
+++ b/hevc_codec_registration.src.html
@@ -188,6 +188,42 @@ mechanisms for packaging the bitstream.
         player generally has random access to the media data.
 </dl>
 
+VideoEncoderEncodeOptions extensions {#videoencoderencodeoptions-extensions}
+==============================================================
+
+<pre class='idl'>
+<xmp>
+partial dictionary VideoEncoderEncodeOptions {
+  VideoEncoderEncodeOptionsForHevc hevc;
+};
+</xmp>
+</pre>
+
+<dl>
+  <dt><dfn dict-member for=VideoEncoderEncodeOptions>hevc</dfn></dt>
+  <dd>
+    Contains codec specific encode options for the [[ITU-T-REC-H.265]] codec.
+  </dd>
+</dl>
+
+VideoEncoderEncodeOptionsForHevc {#hevc-encode-options}
+--------------------------------------
+<pre class='idl'>
+<xmp>
+dictionary VideoEncoderEncodeOptionsForHevc {
+  unsigned short? quantizer;
+};
+</xmp>
+</pre>
+
+<dl>
+  <dt><dfn dict-member for=VideoEncoderEncodeOptionsForHevc>quantizer</dfn></dt>
+  <dd>
+    Sets per-frame quantizer value.
+    In [[ITU-T-REC-H.265]] the quantizer threshold can be varied from 0 to 51.
+  </dd>
+</dl>
+
 Privacy Considerations {#privacy-considerations}
 ==========================================================================
 
