Add to codec registration requirements
Non-public specs must be made available to the WG for review

--- a/codec_registry.src.html
+++ b/codec_registry.src.html
@@ -45,7 +45,7 @@ Registration Entry Requirements {#registration-entry-requirements}
 ==================================================================
 
 1. Each entry must include a unique codec string, a common name string, and a
-    link to a public specification.
+    link to the codec's specification.
 2. The codec string must be crafted as follows:
     1. If the codec string contains a fixed prefix with variable suffix values,
         the suffix must be represented by an asterisk and the registration's
@@ -70,15 +70,17 @@ Registration Entry Requirements {#registration-entry-requirements}
     so they can be discussed and evaluated for compliance before being added to
     the registry. The Media Working Group may seek expertise from outside the
     Working Group as part of its evaluation, e.g., from the codec specification
-    editors or relevant standards group. If the Working Group reaches consensus
-    to accept the candidate, a pull request should be drafted (either by editors
-    or by the party requesting the candidate registration) to register the
-    candidate. The registry editors will review and merge the pull request.
+    editors or relevant standards group. If the codec specification is not
+    publicly available, it must be made available to the Working Group for
+    evaluation. If the Working Group reaches consensus to accept the candidate,
+    a pull request should be drafted (either by editors or by the party
+    requesting the candidate registration) to register the candidate.
+    The registry editors will review and merge the pull request.
 6. Existing entries cannot be deleted or deprecated. They may be changed after
     being published through the same process as candidate entries. Possible
     changes include expansion of the codec string to better qualify the codec,
     adjustments to the codec name string, and modification of the link to the
-    public specification.
+    codec's specification.
 
 
 Audio Codec Registry {#audio-codec-registry}
